<resources>
    <string name="app_name">MVP-DAGGER2-RETROFIT-RX</string>
    <!-- {ViewGroup}.getResources().getQuantityString(
                    R.plurals.likes_count, data.likesCount, data.likesCount-->
    <plurals name="likes_count">
        <!-- one 语言需要对类似1的数字进行特殊处理。（比如英语和其它大多数语言里的1；在俄语里，任何以1结尾但不以11结尾的数也属于此类型。）-->
        <item quantity="one">%d like</item>
        <!-- 语言不需要对数字进行特殊处理 -->
        <item quantity="other">%d likes</item>
    </plurals>

    <!-- Navigation Toolbar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- LoginActivity -->
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="username_error">用户名不能为空</string>
    <string name="password_error">密码不能为空</string>

    <!-- toolbar title -->
    <string name="slidelist_toolbar_title">视频专区</string>
    <string name="main_toolbar_title">@string/app_name</string>
    <string name="login_toolbar_title">登录界面</string>
    <string name="daily_android_tag_tv">Android</string>
    <string name="daily_ios_tag_tv">iOS</string>
    <string name="nav_home_title">首页</string>
    <string name="nav_explore_title">发现</string>
    <string name="nav_follow_title">关注</string>
    <string name="nav_collect_title">收藏</string>
    <string name="nav_register_title">私信</string>
    <string name="nav_settings">设置</string>

    <!-- searchView -->
    <string name="search_hint">输入关键词以搜索</string>
    <string name="searching">搜索中，请稍候…</string>
    <string name="menu_preference">设置</string>
    <string name="share">分享</string>
    <string name="checkNetWork">PLEASE CHECK OUT YOUR NETWORK IS GOOD \n" CLICK ME TO RECONNECTING"</string>
    <string name="joker_1">黄经理和B小姐有一腿。 一日,B小姐给黄经理一幅画两只鸽子下面一只死羊, 黄经理的秘书怎么也看不懂就交给了经理,结果黄经理就大笑了起来…</string>
    <string name="joker_2">下班路过菜市场,见一妹纸站在一卖胡萝卜的摊位前来回踱步欲言又止的样子。 旁边一个卖兔子的大婶说话了:“小姑娘买只兔子吧!” 这时妹纸眼里金光一闪,走到跟前挑都不挑拿起一只就付钱。 而后一脸笑容的走到卖胡萝卜的摊前: 大叔,给我来根萝卜,我要那个大的,回去喂兔子</string>
    <string name="test">仅供测试</string>
</resources>
