<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_layout_fa"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/view_toolbar"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@color/colorPrimary">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="36dp"
                            android:layout_marginTop="15dp"
                            android:text="如何去除Toolbar底部黑线？"
                            android:textColor="@color/design_write_text"
                            android:textSize="@dimen/text_size_20"/>
                    </FrameLayout>

                    <android.support.v7.widget.CardView
                        style="@style/Md.Card"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="@dimen/margin_12dp"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:layout_marginRight="@dimen/margin_10dp"
                        android:layout_marginTop="55dp"
                        android:transitionName="sharedCardView">

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_12dp"
                            android:text="@string/app_name"
                            android:textColor="@color/design_black_secondary"
                            android:textSize="@dimen/text_size_14"/>
                    </android.support.v7.widget.CardView>
                </FrameLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_12dp"
                    android:layout_marginTop="@dimen/margin_12dp"
                    app:cardBackgroundColor="@color/background_layout_fa"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    app:cardElevation="0dp"
                    app:cardPreventCornerOverlap="false"
                    app:contentPadding="0dp">

                    <LinearLayout
                        android:id="@+id/detailContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_12dp"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/joker_1"
                            android:textColor="@color/design_black_text"
                            android:textSize="@dimen/text_size_18"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_12dp"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/joker_2"
                            android:textColor="@color/design_black_text"
                            android:textSize="@dimen/text_size_18"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_12dp"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/joker_2"
                            android:textColor="@color/design_black_text"
                            android:textSize="@dimen/text_size_18"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_12dp"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/joker_2"
                            android:textColor="@color/design_black_text"
                            android:textSize="@dimen/text_size_18"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>